cmake_minimum_required(VERSION 2.8.4)

IF(BIICODE)
   INIT_BIICODE_BLOCK()

   MESSAGE(STATUS "BII_BLOCK_NAME: ${BII_BLOCK_NAME}")
   MESSAGE(STATUS "BII_BLOCK_USER: ${BII_BLOCK_USER}")
   MESSAGE(STATUS "BII_LIB_SRC: ${BII_LIB_SRC}")
   MESSAGE(STATUS "BII_LIB_TYPE: ${BII_LIB_TYPE}")
   MESSAGE(STATUS "BII_LIB_DEPS: ${BII_LIB_DEPS}")
   MESSAGE(STATUS "BII_LIB_SYSTEM_HEADERS: ${BII_LIB_SYSTEM_HEADERS}")
   MESSAGE(STATUS "BII_exe_name_SRC: ${BII_exe_name_SRC}")
   MESSAGE(STATUS "BII_BLOCK_EXES: ${BII_BLOCK_EXES}")

   ADD_BIICODE_TARGETS()
   MESSAGE(STATUS "BII_BLOCK_TARGET: ${BII_BLOCK_TARGET}")
   MESSAGE(STATUS "BII_LIB_TARGET: ${BII_LIB_TARGET}")
   MESSAGE(STATUS "BII_BLOCK_TARGETS: ${BII_BLOCK_TARGETS}")
   MESSAGE(STATUS "BII_exe_name_TARGET: ${BII_exe_name_TARGET}")
ELSE()

project(b64_sample)

set(SOURCE_FILES sample.c src/b64.c)

include_directories("/usr/local/include" ${PROJECT_SOURCE_DIR}/src)

link_directories("/usr/local/lib")

add_executable(b64_sample ${SOURCE_FILES})

ENDIF()
